--- a/logo.html
+++ b/logo.html
@@ -57,24 +57,73 @@
                 <a href="index.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
-            <div style="background-color: #4B4E6D;">
-                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Joint Meeting</h2>
+            <div style="background-color: #601700;">
+                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Logo Design Challenge</h2>
                 <div class="d-flex justify-content-around align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/FinalSGAJointSession2018.jpg" class="rounded mx-auto d-block" width="350px" height="500px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Flyer</div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Alison Cosmetics-01.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSSquare-01.jpg" class="rounded mx-auto d-block" width="300px" height="300px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square</div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/ZeldaGuide.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/VortexAnalytics.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-around align-items-end">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-01.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-02.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-03.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSYardSign-2.jpg" class="rounded mx-auto d-block" width="780px" height="550px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Yard Sign</div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-05.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-06.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-07.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-around">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Logodesignday9-01.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-08.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Designhil(1)-09.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;"></div>
                     </div>
                 </div>
             </div>
