--- a/wdp.html
+++ b/wdp.html
@@ -224,24 +224,24 @@
 </body>
 
 <footer>
-  <div class="d-flex flex-row bd-highlight mb-3 d-flex justify-content-between">
-      <div class="p-2 bd-highlight" style="color: white; line-height: 35px;">
-          <h4>Contact Info:</h4>
-              <ul>
-                  <li>Email: marina_akhter@hotmail.com</li>
-                  <li>Instagram: marina96_designs</li>
-                  <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
-              </ul>
-      </div>
-      <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
-        <h4>Site</h4>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Resume</li>
-            </ul>
-      </div>
-  </div>
+    <div class="d-flex flex-row bd-highlight mb-3 d-flex justify-content-between">
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px;">
+            <h4>Contact Info:</h4>
+                <ul>
+                    <li>Email: marina_akhter@hotmail.com</li>
+                    <li>Instagram: marina96_designs</li>
+                    <a href="https://www.linkedin.com/in/marina-akhter-474584165/" target="_blank" style="text-decoration: none; color: white;"><li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li></a>
+                </ul>
+        </div>
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
+            <h4>Site</h4>
+                <ul>
+                    <a href="index.html" style="text-decoration: none; color: white;"><li>Home</li></a>
+                    <a href="profile.html" style="text-decoration: none; color: white;"><li>Profile</li></a>
+                    <a href="resume.html" style="text-decoration: none; color: white;"><li>Resume</li></a>
+                </ul>
+        </div>
+    </div>
 </footer>
 
 <div class="preloader">
