--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
                 <a href="ep.html"><img src="Graphic Design/environmentposterbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <a href="logo.html"><img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
             </div>
         </div>
     </div>
@@ -84,15 +84,15 @@
                 <ul>
                     <li>Email: marina_akhter@hotmail.com</li>
                     <li>Instagram: marina96_designs</li>
-                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+                    <a href="https://www.linkedin.com/in/marina-akhter-474584165/" target="_blank" style="text-decoration: none; color: white;"><li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li></a>
                 </ul>
         </div>
         <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
             <h4>Site</h4>
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Resume</li>
+                    <a href="index.html" style="text-decoration: none; color: white;"><li>Home</li></a>
+                    <a href="profile.html" style="text-decoration: none; color: white;"><li>Profile</li></a>
+                    <a href="resume.html" style="text-decoration: none; color: white;"><li>Resume</li></a>
                 </ul>
         </div>
     </div>
