--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
 
     <div class="background">
         <div class="background2">
-            <img src="img/Resume2020(2).jpg" class="resume" style="width: 75%; display: block; margin-left: auto; margin-right: auto; border: solid black 1px;">
+            <img src="img/Resume2021.jpg" class="resume" style="width: 75%; display: block; margin-left: auto; margin-right: auto; border: solid black 1px;">
         </div>
     </div> 
 </body>
@@ -59,15 +59,15 @@
                 <ul>
                     <li>Email: marina_akhter@hotmail.com</li>
                     <li>Instagram: marina96_designs</li>
-                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+                    <a href="https://www.linkedin.com/in/marina-akhter-474584165/" target="_blank" style="text-decoration: none; color: white;"><li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li></a>
                 </ul>
         </div>
         <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
             <h4>Site</h4>
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Resume</li>
+                    <a href="index.html" style="text-decoration: none; color: white;"><li>Home</li></a>
+                    <a href="profile.html" style="text-decoration: none; color: white;"><li>Profile</li></a>
+                    <a href="resume.html" style="text-decoration: none; color: white;"><li>Resume</li></a>
                 </ul>
         </div>
     </div>
