--- a/brand.html
+++ b/brand.html
@@ -61,8 +61,8 @@
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="tbe.html"><img src="Graphic Design/CCQSbutton-26.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <a href="#"><img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="#"><img src="Graphic Design/BHbutton-25.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="#"><img src="Graphic Design/CCQSbutton-26.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
             </div>
         </div>
     </div>
