--- a/product.html
+++ b/product.html
@@ -59,6 +59,11 @@
                 <a href="brand.html"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
                 <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="active2"></a>
             </div>
+
+            <div style="display: flex; flex-direction: row; justify-content: space-around;">
+                <a href="#"><img src="Graphic Design/byheartproductbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="#"><img src="Graphic Design/Stickerbutton-31.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+            </div>
         </div>
     </div>
 </body>
