--- a/canvas.html
+++ b/canvas.html
@@ -54,27 +54,24 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="index.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
+                <a href="product.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
-            <div style="background-color: #4B4E6D;">
-                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Joint Meeting</h2>
-                <div class="d-flex justify-content-around align-items-end">
+            <div style="background-color: #432818;">
+                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Canvas Designs</h2>
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/FinalSGAJointSession2018.jpg" class="rounded mx-auto d-block zoom3" width="350px" height="500px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Flyer</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/thesis design 1(S Print)-01_original.jpg" class="rounded mx-auto d-block zoom3" width="450px" height="300px"></div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSSquare-01.jpg" class="rounded mx-auto d-block zoom3" width="300px" height="300px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/Thesis wall decor (3)(Print)-01_original.jpg" class="rounded mx-auto d-block zoom3" width="450px" height="300px"></div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-around">
+                <div class="d-flex justify-content-around" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSYardSign-2.jpg" class="rounded mx-auto d-block zoom3" width="780px" height="550px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Yard Sign</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/thesis wall descor (2)(R) [Recovered]-01_original.jpg" class="rounded mx-auto d-block zoom3" width="450px" height="300px"></div>
                     </div>
                 </div>
             </div>
