--- a/df.html
+++ b/df.html
@@ -61,14 +61,14 @@
                 <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Decal Fundraiser</h2>
                 <div class="d-flex justify-content-around align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SSRDecal-01.jpg" class="rounded mx-auto d-block" width="350px" height="500px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/SSRDecal-01.jpg" class="rounded mx-auto d-block zoom3" width="350px" height="500px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Flyer</div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SSRDecalSign-01.jpg" class="rounded mx-auto d-block" width="800px" height="380px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/SSRDecalSign-01.jpg" class="rounded mx-auto d-block zoom3" width="800px" height="380px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Digital Sign</div>
                     </div>
                 </div>
