--- a/ep.html
+++ b/ep.html
@@ -61,19 +61,19 @@
                 <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Environmental Posters</h2>
                 <div class="d-flex justify-content-center align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/pictogram II-07.jpg" class="rounded mx-auto d-block" width="350px" height="500px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/pictogram II-07.jpg" class="rounded mx-auto d-block zoom3" width="350px" height="500px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Planning Stage</div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment poster 1-2.jpg" class="rounded mx-auto d-block" width="450px" height="730px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment poster 1-2.jpg" class="rounded mx-auto d-block zoom3" width="450px" height="730px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Poster 1</div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment Poster 2-01.jpg" class="rounded mx-auto d-block" width="450px" height="730px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment Poster 2-01.jpg" class="rounded mx-auto d-block zoom3" width="450px" height="730px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Poster 2</div>
                     </div>
                 </div>
