--- a/hp.html
+++ b/hp.html
@@ -61,24 +61,24 @@
                 <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Hazing Prevention</h2>
                 <div class="d-flex justify-content-around align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/HpSquare3.jpg" class="rounded mx-auto d-block" width="250px" height="250px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/HpSquare3.jpg" class="rounded mx-auto d-block zoom3" width="250px" height="250px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square 1</div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPSquare2-01.jpg" class="rounded mx-auto d-block" width="250px" height="250px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPSquare2-01.jpg" class="rounded mx-auto d-block zoom3" width="250px" height="250px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square 2</div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPOsquare.jpg" class="rounded mx-auto d-block" width="250px" height="250px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPOsquare.jpg" class="rounded mx-auto d-block zoom3" width="250px" height="250px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square 3</div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPDigitalSign.jpg" class="rounded mx-auto d-block" width="800px" height="380px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/HPDigitalSign.jpg" class="rounded mx-auto d-block zoom3" width="800px" height="380px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Digital Sign</div>
                     </div>
                 </div>
