--- a/sticker.html
+++ b/sticker.html
@@ -54,27 +54,31 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="index.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
+                <a href="product.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
-            <div style="background-color: #4B4E6D;">
-                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Joint Meeting</h2>
-                <div class="d-flex justify-content-around align-items-end">
+            <div style="background-color: #21A179;">
+                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Sticker Designs</h2>
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/FinalSGAJointSession2018.jpg" class="rounded mx-auto d-block zoom3" width="350px" height="500px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Flyer</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0782-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSSquare-01.jpg" class="rounded mx-auto d-block zoom3" width="300px" height="300px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0784-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                    </div>
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0785-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-around">
+                <div class="d-flex justify-content-around" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/SGAJSYardSign-2.jpg" class="rounded mx-auto d-block zoom3" width="780px" height="550px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Yard Sign</div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0786-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                    </div>
+
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0787-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
                     </div>
                 </div>
             </div>
