--- a/product.html
+++ b/product.html
@@ -61,8 +61,8 @@
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="#"><img src="Graphic Design/byheartproductbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <a href="#"><img src="Graphic Design/Stickerbutton-31.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="canvas.html"><img src="Graphic Design/byheartproductbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="sticker.html"><img src="Graphic Design/Stickerbutton-31.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
             </div>
         </div>
     </div>
