--- a/tbe.html
+++ b/tbe.html
@@ -61,31 +61,31 @@
                 <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">The Big Event</h2>
                 <div class="d-flex justify-content-around align-items-end">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEvent.jpg" class="rounded mx-auto d-block" width="350px" height="500px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEvent.jpg" class="rounded mx-auto d-block zoom3" width="350px" height="500px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Flyer</div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventQuarterPage-01.jpg" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventQuarterPage-01.jpg" class="rounded mx-auto d-block zoom3" width="300px" height="400px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Quarter Page Flyer</div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventSquare-01.jpg" class="rounded mx-auto d-block" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventSquare-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Social Media Square</div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventHalfPage-01.jpg" class="rounded mx-auto d-block" width="650px" height="400px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/TheBigEventHalfPage-01.jpg" class="rounded mx-auto d-block zoom3" width="650px" height="400px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Half Page Flyer</div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Graphic Design/BigEventWebpageSign.jpg" class="rounded mx-auto d-block" width="780px" height="400px"></div>
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/BigEventWebpageSign.jpg" class="rounded mx-auto d-block zoom3" width="780px" height="400px"></div>
                         <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Digital Sign</div>
                     </div>
                 </div>
