--- a/bh.html
+++ b/bh.html
@@ -54,15 +54,26 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="active2"></a>
-                <a href="product.html"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+                <a href="product.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="bh.html"><img src="Graphic Design/BHbutton-25.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <a href="#"><img src="Graphic Design/CCQSbutton-26.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+            <div style="background-color: #A09BE7;">
+                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">By Heart</h2>
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-01.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Main Logo</div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
+                    <div class="d-flex flex-row bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Secondary Logos</div>
+                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-05.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-07.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
