--- a/bh.html
+++ b/bh.html
@@ -58,22 +58,113 @@
             </div>
 
             <div style="background-color: #A09BE7;">
-                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">By Heart</h2>
-                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
+                <h2 style="text-align: center; font-size: 100px; color: black; margin-top: 15px; font-family: Avenir;">By Heart</h2>
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px; background-color: white;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
                         <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-01.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Main Logo</div>
+                        <div class="p-2 bd-highlight" style="color: black; font-weight: bold; text-align: center; font-size: 20px;">Main Logo</div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px; background-color: white;">
+                    <div class="d-flex flex-row bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight" style="color: black; font-weight: bold; font-size: 20px;">Secondary Logos</div>
+                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-05.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-07.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
                     </div>
                 </div>
 
                 <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
                     <div class="d-flex flex-row bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Secondary Logos</div>
-                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-05.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
-                        <div class="p-2 bd-highlight"><img src="Brand Identity/thesis logo-07.png" class="rounded mx-auto d-block" width="300px" height="400px"></div>
+                        <div class="p-2 bd-highlight" style="color: black; font-weight: bold; font-size: 20px;">Main logo colors</div>
                     </div>
                 </div>
-                
+
+                <div class="d-flex flex-row justify-content-around">
+                    <div class="card" style="width: 15rem;">
+                        <img src="Brand Identity/logo colors-13.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title" style="text-align: center;">#AD343E</h5>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 15rem;">
+                        <img src="Brand Identity/logo colors-14.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title" style="text-align: center;">#960200</h5>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 15rem;">
+                        <img src="Brand Identity/logo colors-15.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title" style="text-align: center;">#F70000</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 25px; margin-top: 40px;">
+                    <div class="d-flex flex-row bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight" style="color: black; font-weight: bold; font-size: 20px;">Secondary logo colors</div>
+                    </div>
+                </div>
+
+                <div class="d-flex flex-row justify-content-between">
+                    <div class="d-flex flex-row justify-content-start" style="margin: 10px;">
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-19.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#813405</h5>
+                            </div>
+                        </div>
+
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-20.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#D45113</h5>
+                            </div>
+                        </div>
+
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-21.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#FFD046</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-row justify-content-end" style="margin: 10px;">
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-16.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#813405</h5>
+                            </div>
+                        </div>
+
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-17.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#D45113</h5>
+                            </div>
+                        </div>
+
+                        <div class="card" style="width: 8rem; margin: 5px;">
+                            <img src="Brand Identity/logo colors-18.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title" style="text-align: center;">#FFD046</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-start align-items-end" style="margin-bottom: 35px; margin-top: 45px; margin-left: 15px;">
+                    <div class="d-flex flex-row bd-highlight">
+                        <div class="p-2 bd-highlight" style="color: black; font-weight: bold; font-size: 50px;">Typeface: Kanit Bold</div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </div>
