--- a/bh.html
+++ b/bh.html
@@ -54,7 +54,7 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="product.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
+                <a href="brand.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
             <div style="background-color: #A09BE7;">
