--- a/sticker.html
+++ b/sticker.html
@@ -61,24 +61,24 @@
                 <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Sticker Designs</h2>
                 <div class="d-flex justify-content-around align-items-end" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0782-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0782-01.jpg" class="mx-auto d-block zoom3" width="200px" height="200px" style="border: black solid 2px"></div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0784-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0784-01.jpg" class="mx-auto d-block zoom3" width="200px" height="200px" style="border: black solid 2px"></div>
                     </div>
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0785-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0785-01.jpg" class="mx-auto d-block zoom3" width="200px" height="200px" style="border: black solid 2px"></div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-around" style="margin-bottom: 35px;">
+                <div class="d-flex justify-content-evenly" style="margin-bottom: 35px;">
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0786-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0786-01.jpg" class="mx-auto d-block zoom3" width="200px" height="200px" style="border: black solid 2px"></div>
                     </div>
 
                     <div class="d-flex flex-column bd-highlight justify-content-center">
-                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0787-01.jpg" class="rounded mx-auto d-block zoom3" width="200px" height="200px"></div>
+                        <div class="p-2 bd-highlight"><img src="Product Design/IMG_0787-01.jpg" class="mx-auto d-block zoom3" width="200px" height="200px" style="border: black solid 2px"></div>
                     </div>
                 </div>
             </div>
