--- a/wdp.html
+++ b/wdp.html
@@ -48,7 +48,167 @@
             <a href="uxui.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
         </div>
 
-        <div style="background-color: #0C7975;">
+        <div style="margin-top: 50px;">
+            <h style="margin: 35px; margin-bottom: 45px; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;" >About this Project</h>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="ux.ui/Intro.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="ux.ui/Why WDP.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="ux.ui/Problem.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+        <div style="margin-top: 50px;">
+            <h style="margin: 35px; margin-bottom: 45px; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;">Research</h>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="ux.ui/Survey.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="ux.ui/Heuristic Evaluation.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="ux.ui/SWOT Analysis.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="ux.ui/Red-lining.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+        <div style="margin-top: 50px;">
+            <h style="margin: 35px; margin-bottom: 45px; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;">Definition</h>
+            <div class="bd-example">
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="ux.ui/Proto-Persona.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                    <img src="ux.ui/User Persona.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                    <img src="ux.ui/User Journey Map.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                    </div>
+                    <div class="carousel-item">
+                    <img src="ux.ui/Task Flow.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                </div>
+            </div>
+        </div>
+
+        <div style="margin-top: 50px;">
+            <h style="margin: 35px; margin-bottom: 45px; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;">Design Process</h>
+            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="10000">
+                    <img src="ux.ui/Lofi.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="10000">
+                    <img src="ux.ui/Iteration1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="10000">
+                    <img src="ux.ui/Iteration2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="10000">
+                    <img src="ux.ui/A:B.jpg" class="d-block w-100" alt="...">
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        
+        <div style="margin-top: 50px;">
+            <h style="margin: 35px; margin-bottom: 45px; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;">Style Guide</h>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="ux.ui/Color.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="ux.ui/Type.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="ux.ui/Button.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="ux.ui/A:B.jpg" class="d-block w-100" alt="...">
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+        <div style="margin-top: 50px; margin-left: 25px;">
+            <h style="margin: 15px; margin-bottom: 45px; color: black; font-size: 35px; font-family: Helvetica Neue; font-weight: bold;"><a href="https://www.figma.com/proto/qOoOR6K8w4mOW8RCuWu2NM/WDP-Iteration?node-id=6%3A3&starting-point-node-id=6%3A3" target="_blank">Click Here for the Prototype</a></h>
+        </div>
+        <!--<div style="background-color: #0C7975;">
             <div>
                 <h1 class="display-4" style="font-family: Helvetica Neue; font-size: 100px; text-align: center; color: white; font-weight: bold; margin-top: 45px;">WDP Redesign Project</h1>
             </div>
@@ -217,7 +377,7 @@
                     <div class="p-2 bd-highlight" style="color: white; font-size: 20px; margin-left: 20px;">A/B Testing helped our team determine that a lighter body typeface, rather than stark black, provided a better contrast with our color scheme</div>
                 </div> 
             </div>
-        </div>
+        </div>-->
     </div>
   </div>
   
